<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/rtsp_header">

        <EditTextPreference
            app:key="url"
            app:title="@string/url_title"
            android:hint="rtsp://host:554/11"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password"
            app:title="@string/password_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="onvif"
            app:title="@string/onvif_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>